# Smol

./: CMakeLists.txt  README.md
Exercises/: CMakeLists.txt  Level.txt  Main.cpp
Exercises/FileManagement/: FileManager.cpp  FileManager.h
Exercises/Level/: Cell.cpp  Cell.h  Level.cpp  Level.h
Exercises/Player/: Player.h
Exercises/Utility/: Log.cpp  Log.h
Exercises/resources/shaders/: basic.shader
Exercises/source/Graphics/: Draw.cpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Exercises/source/game/: Component.cpp  Component.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  QuadRenderer.cpp  QuadRenderer.h
Exercises/source/input/: Input.cpp  Input.h
Libraries/Simlib/: CMakeLists.txt  Simlib.cpp  Simlib.h
Libraries/glew-2.1.0/: glew.pc
